Clean up RecapKensAlignmentTools